--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@
                     <option value="z-ai/glm-4.6">GLM 4.6</option>
                     <option value="x-ai/grok-4-fast">Grok-4 Fast</option>
                     <option value="x-ai/grok-4.1-fast">Grok-4.1</option>
-                    <option value="meta-llama/llama-3.1-70b-instruct">Llama 3.1 70B</option>
+                    <option value="google/gemini-2.5-flash">Gemini 2.5 Flash</option>
                     <option value="meta-llama/llama-3.1-8b-instruct">Llama 3.1 8B</option>
                 </select>
             </div>
