--- a/public/index.html
+++ b/public/index.html
@@ -308,7 +308,7 @@
                     <option value="x-ai/grok-4-fast">Grok-4 Fast</option>
                     <option value="x-ai/grok-4.1-fast">Grok-4.1</option>
                     <option value="google/gemini-2.5-flash">Gemini 2.5 Flash</option>
-                    <option value="meta-llama/llama-3.1-8b-instruct">Llama 3.1 8B</option>
+                    <option value="z-ai/glm-4.7">GLM 4.7</option>
                 </select>
             </div>
             <div class="input-group">
