--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,7 @@
             <div class="input-group">
                 <label>Model</label>
                 <select id="model">
-      		<option value="moonshotai/kimi-k2-thinking">Kimi-K2-thinking</option>
+      		<option value="anthropic/claude-sonnet-4.5">Claude 4.5 Sonnet</option>
                     <option value="anthropic/claude-3.5-sonnet">Claude 3.5 Sonnet</option>
                     <option value="x-ai/grok-code-fast-1">Grok Code Fast 1</option>
                     <option value="z-ai/glm-4.6">GLM 4.6</option>
